--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         // Share results by copying to clipboard
         function shareResults() {
-            const siteUrl = "https://vel-schmusis.github.io/woozy-test"; // Replace with your actual site URL
+            const siteUrl = "https://vel-schmusis.github.io/woozy-quiz"; // Replace with your actual site URL
             const resultText = `I'm ${randomPercentage}% woozy 🥴 - ${siteUrl}`;
             navigator.clipboard.writeText(resultText).then(() => {
                 const confirmation = document.getElementById('copy-confirmation');
